--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Sharan3009/evive-engineering-test#readme",
   "devDependencies": {
     "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
